--- a/jstask2/css/6.less
+++ b/jstask2/css/6.less
@@ -76,8 +76,8 @@ header {
             border-radius: ~ "50% / 0 0 100% 100% ";
         }
         p {
-            height: 1.5rem;
-            line-height: 1.5rem;
+            
+            line-height: 2.5rem;
             text-align: left;
             font-size: .8rem;
         }
@@ -91,7 +91,7 @@ header {
             border: solid .07rem #ccc;
             background: ~"url(../img/img.png) 16% 90% /131% no-repeat";
         }
-        .button {
+        span {
             position: relative;
             display: block;
             line-height: 2rem;
@@ -99,8 +99,8 @@ header {
             padding-right: 1.2rem;
             color: #fff;
             background: #24a7c6;
-            &::before {
-                content: "";
+            .trianglea,.triangleb,.trianglec,.triangled {
+                
                 position: absolute;
                 top: .5rem;
                 left: -2.2rem;
@@ -111,11 +111,12 @@ header {
                 border-right: .7rem solid #24a7c6;
                 border-top: .4rem solid transparent;
             }
+            
         }
         .sun {
             position: absolute;
             left: -1.1rem;
-            top: 5.2rem;
+            top: 3.9rem;
             width: 2rem;
             height: 2rem;
             border-radius: 50%;
