--- a/jstask2/css/7.less
+++ b/jstask2/css/7.less
@@ -33,9 +33,11 @@ header {
     color: #fff;
     border-bottom: solid #fff .07rem;
     img {
+        visibility: hidden;
         width: .8rem;
         margin-left: .5rem;
         padding-right: .8rem;
+        background: #29bde0;
     }
     div {
         position: relative;
