--- a/jstask2/css/6.css
+++ b/jstask2/css/6.css
@@ -125,3 +125,27 @@ header div::after {
 .list .matter span:nth-child(3) {
   margin-top: 0;
 }
+footer {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 3.5rem;
+  background-color: rgba(153, 223, 240, 0.5);
+}
+footer span {
+  display: block;
+  width: 8.5rem;
+  line-height: 2.7rem;
+  text-align: center;
+  border-radius: .4rem;
+  color: #fff;
+}
+footer span:first-child {
+  background: #f66f6f;
+}
+footer span:last-child {
+  background: #fbb435;
+}
