--- a/jstask2/css/6.less
+++ b/jstask2/css/6.less
@@ -128,3 +128,29 @@ header {
         }
     }
 }
+footer {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 3.5rem;
+    background-color:rgba(153,223,240,0.5) ;
+    span {
+        display: block;
+        width: 8.5rem;
+        line-height: 2.7rem;
+        text-align: center;
+        border-radius: .4rem;
+        color: #fff;
+        
+    }
+    span:first-child {
+        background: #f66f6f;
+    }
+    span:last-child {
+        background: #fbb435;
+    }
+
+}
