--- a/jstask2/css/4.less
+++ b/jstask2/css/4.less
@@ -76,7 +76,7 @@ header+div {
             margin: 6rem auto 0;
         }
     }
-    span:nth-child(4) {
+    p {
         display: none;
     }
     
