--- a/jstask2/css/6.css
+++ b/jstask2/css/6.css
@@ -9,11 +9,15 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
+  top: 0;
+  width: 100%;
   height: 3rem;
   font-size: 1.4rem;
   color: #fff;
   border-bottom: solid #fff .07rem;
   background: #29bde0;
+  z-index: 1;
 }
 header img {
   width: .8rem;
@@ -46,26 +50,26 @@ header div::after {
   transform: rotate(45deg);
   background-color: #fff;
 }
-.list {
+#list {
   width: 90%;
-  margin: .5rem auto 0;
+  margin: 3.5rem auto 3.5rem;
   background: #fff;
   text-align: center;
 }
-.list .day {
+#list .day {
   display: block;
   line-height: 2rem;
   color: #29bde0;
   border-top: #ccc solid .07rem;
   border-bottom: #ccc solid .07rem;
 }
-.list .matter {
+#list .matter {
   position: relative;
   margin-left: 1.5rem;
   padding: 1rem 2rem;
   border-left: solid #ccc .07rem;
 }
-.list .matter .dot {
+#list .matter .dot {
   position: absolute;
   top: 0;
   left: -0.28rem;
@@ -74,12 +78,12 @@ header div::after {
   background: #ccc;
   border-radius: 50% / 0 0 100% 100% ;
 }
-.list .matter p {
+#list .matter p {
   line-height: 2.5rem;
   text-align: left;
   font-size: .8rem;
 }
-.list .matter .moon {
+#list .matter .moon {
   position: absolute;
   left: -1.1rem;
   top: .9rem;
@@ -89,7 +93,7 @@ header div::after {
   border: solid .07rem #ccc;
   background: url(../img/img.png) 16% 90% /131% no-repeat;
 }
-.list .matter span {
+#list .matter span {
   position: relative;
   display: block;
   line-height: 2rem;
@@ -98,10 +102,10 @@ header div::after {
   color: #fff;
   background: #24a7c6;
 }
-.list .matter span .trianglea,
-.list .matter span .triangleb,
-.list .matter span .trianglec,
-.list .matter span .triangled {
+#list .matter span .trianglea,
+#list .matter span .triangleb,
+#list .matter span .trianglec,
+#list .matter span .triangled {
   position: absolute;
   top: .5rem;
   left: -2.2rem;
@@ -112,7 +116,7 @@ header div::after {
   border-right: .7rem solid #24a7c6;
   border-top: .4rem solid transparent;
 }
-.list .matter .sun {
+#list .matter .sun {
   position: absolute;
   left: -1.1rem;
   top: 3.9rem;
@@ -122,7 +126,7 @@ header div::after {
   border: solid .07rem #ccc;
   background: url(../img/img.png) 21% 8.3% /136% no-repeat;
 }
-.list .matter span:nth-child(3) {
+#list .matter span:nth-child(3) {
   margin-top: 0;
 }
 footer {
