--- a/jstask2/css/6.less
+++ b/jstask2/css/6.less
@@ -11,11 +11,15 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    top: 0;
+    width: 100%;
     height: 3rem;
     font-size: 1.4rem;
     color: #fff;
     border-bottom: solid #fff .07rem;
     background: #29bde0;
+    z-index: 1;
     img {
         width: .8rem;
         margin-left: .5rem;
@@ -49,9 +53,9 @@ header {
     }
 }
 
-.list {
+#list {
     width: 90%;
-    margin: .5rem auto 0;
+    margin: 3.5rem auto 3.5rem;
     background: #fff;
     text-align: center;
     .day {
