--- a/jstask6/css/list.css
+++ b/jstask6/css/list.css
@@ -1,3 +1,7 @@
+.all {
+  overflow: hidden;
+  min-height: 100vh;
+}
 header strong {
   float: left;
   width: 250px;
@@ -41,12 +45,15 @@ li {
   margin: 0 !important;
   padding: 0;
 }
-.menu {
-  float: left;
+.ulbox {
   width: 250px;
-  height: calc(100vh - 50px);
-  color: #fff;
+  float: left;
+  padding-bottom: 3000px;
+  margin-bottom: -3000px;
   background: #232a3a;
+}
+.menu {
+  color: #fff;
 }
 .menu div {
   position: relative;
@@ -101,70 +108,7 @@ li {
 .content {
   float: left;
   width: calc(100% - 250px);
-  height: calc(100vh - 50px) ;
+  min-height: calc(100vh - 50px) ;
   padding: 30px 30px 0 30px;
   background: #f5f5f5;
-}
-.artical {
-  background: #fff;
-  padding-top: 10px;
-  margin-bottom: 30px;
-}
-.artical i {
-  content: "";
-  display: table;
-  clear: both;
-}
-.artical div {
-  float: left;
-  width: 33.3%;
-  height: 50px;
-}
-.artical span {
-  float: left;
-  display: block;
-  width: 35%;
-  padding: 5px;
-  font-weight: 700;
-  text-align: center;
-}
-.artical input {
-  float: left;
-  width: 60%;
-  padding: 5px;
-  outline: none;
-  border: #ccc 1px solid;
-  border-radius: 5px;
-}
-.artical .button-box {
-  display: flex;
-  float: none;
-  width: 100%;
-  justify-content: flex-end;
-}
-.artical .button-box button {
-  width: 60px;
-  height: 35px;
-  color: #fff;
-  margin-right: 2%;
-  background: #66a766;
-  border: none;
-  border-radius: 5px;
-}
-.artical + div div:first-child {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 2%;
-  background: #ddd;
-}
-.artical + div div:first-child button {
-  color: #fff;
-  background: #66a766;
-  border: none;
-  border-radius: 5px;
-}
-.artical + div div:nth-child(2) {
-  background: #fff;
-  padding: 2%;
 }
