--- a/jstask6/css/list.less
+++ b/jstask6/css/list.less
@@ -1,3 +1,7 @@
+.all {
+    overflow: hidden;
+   min-height: 100vh;
+}
 header {
    strong {
        float: left;
@@ -45,12 +49,21 @@ ul,li {
     margin: 0 !important;
     padding: 0;
 }
-.menu {
+.ulbox {  
+     width: 250px;
     float: left;
-    width: 250px;
-    height:~"calc(100vh - 50px)";
-    color: #fff;
+    padding-bottom: 3000px;
+    margin-bottom: -3000px;
     background: rgb(35, 42, 58);
+   
+}
+.menu {
+   
+  
+    
+    
+    color: #fff;
+    
     div {
         position: relative;
         line-height: 40px;
@@ -110,77 +123,7 @@ ul,li {
 .content {
     float: left;
     width:~"calc(100% - 250px)";
-    height: ~"calc(100vh - 50px) ";
+   min-height: ~"calc(100vh - 50px) ";
     padding: 30px 30px 0 30px;
     background: #f5f5f5;
-}
-.artical {
-    background: #fff;
-    padding-top: 10px;
-    margin-bottom: 30px;
-    i{
-        content: "";
-        display: table;
-        clear: both;
-        
-    }
-    div {
-        float: left;
-        width: 33.3%;
-        height: 50px;
-    }
-    span{
-        float: left;
-        display: block;
-        width: 35%;
-        padding: 5px;
-        font-weight: 700;
-        text-align: center;
-    }
-    input {
-        float: left;
-        width: 60%;
-        padding: 5px;
-        outline: none;
-        border: #ccc 1px solid;
-        border-radius: 5px;
-    }
-    .button-box {
-        
-        display: flex;
-        float: none;
-        width: 100%;
-        justify-content: flex-end;
-        button {
-            width: 60px;
-            height: 35px;
-
-            color: #fff;
-            margin-right: 2%;
-            background: rgb(102, 167, 102);
-            border: none;
-            border-radius: 5px;
-
-        }
-    }
-   
-}
-.artical+div{
-    div:first-child {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 2%;
-        background: #ddd;
-        button {
-            color: #fff;
-            background: rgb(102, 167, 102);
-            border: none;
-            border-radius: 5px;
-        }
-    }
-    div:nth-child(2) {
-        background: #fff;
-        padding: 2%;
-    }
 }
