--- a/jstask6/view/list.html
+++ b/jstask6/view/list.html
@@ -1,4 +1,5 @@
-<header>
+<div  ng-controller="personCtrl" >
+<header >
     <strong class="text-center">萝卜多后台管理系统</strong>
     <div>
         <span>
@@ -7,11 +8,11 @@
         <span>
             <a href="">admin</a>
         </span>
-        <img src="img/close.png" alt="">
+        <img src="img/close.png" ng-click="logout()">
     </div>
 </header>
 <div class="ulbox">
-<ul class="menu" ng-controller="personCtrl" >
+<ul class="menu"  >
     <li ng-repeat="x in listDown" >
         <div class="list" ng-click="toggle($index)" ng-class="{'color':x.show}">
             <img src="img/pencil.png">
@@ -32,5 +33,6 @@
     
 </div>
 
+</div>
 
 </div>
